# LandHouseBackEnd

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn_conf.py  pyproject.toml  requirements  requirements.txt
apis/: admin.py  choices.py  exceptions.py  models.py  serializers.py  translation.py  views.py
apis/migrations/: 0001_initial.py  0002_object_description_object_description_ru_and_more.py  0003_alter_object_updated_at.py  0004_alter_object_options_alter_objectphoto_options.py  0005_alter_objectphoto_object_fk.py  0006_object_latitude_object_longitude_alter_object_status_and_more.py  0007_company_alter_object_options_and_more.py  0008_alter_object_options_company_address_and_more.py  0009_application_applicationobject_applicationroom.py  0010_new_object_main_object_video.py  0011_new_description_ru_new_description_uz_new_title_ru_and_more.py  0012_remove_new_video_new_photo.py  0013_alter_objectroom_block.py  0014_alter_application_options_and_more.py  0015_alter_application_options_and_more.py  0016_remove_objectblockroom_block.py  0017_aboutcompany_banner_aboutcompanyimages.py
core/: settings.py  urls.py
utils/: base64.py  chack_auth.py  languages.py  middlewares.py  pagination.py  pk.py  redis.py  responses.py
